@@ -23,3 +23,4 @@ $dPath = $masterPath . "d$phpExt";
 
 // constants
 $banner = 'Generated by <a href="http://www.thregr.org/~wavexx/hacks/dl/">dl ticket service</a>';
+$cookieLifetime = 1000 * 60 * 60 * 24 * 90;
