@@ -2,6 +2,7 @@ dl 0.6:
 ------------------
 
 * Allow to tune the DB expiration process with $gcProbability and $gcLimit.
+* Remember the selected language with a cookie.
 
 
 dl 0.5: 09/02/2010
